--- a/재고검색.html
+++ b/재고검색.html
@@ -5,7 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
- <link rel="stylesheet" href="공용css.css">
+ <link rel="stylesheet" href="재고검색.css">
 </head>
 <body>
   
