--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  <script src='main.js'></script>
-</head>
-<body>
+  <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
   
+</head>
+<body> <!------------ 점주로그인 페이지---------------->
+  <div id="wrap"><!--전체 페이지-->
+    <div id="header">
+
+    </div> <!--header end-->
+    <div id="content">
+
+    </div><!--content end-->
+    <div id="footer">
+
+    </div><!--footer end-->
+  </div><!--wrap end-->
+  <script src='index.js'></script>
 </body>
 </html>
