--- a/관리자회원가입.html
+++ b/관리자회원가입.html
@@ -28,37 +28,16 @@
     <div class="main">
       <div class="main-center">
         <div class="box1">
-          <table>
-            <tr>
-              <th>아이디</th>
-              <td><input /></td><td><button class="List">중복확인</button></td>
-            </tr>
-            <tr>
-              <th>비밀번호</th>
-              <td><input /></td>
-            </tr>
-            <tr>
-              <th>비밀번호 확인</th>
-              <td><input /></td>
-            </tr>
-            <tr>
-              <th>사업자등록번호</th>
-              <td><input /></td>>
-            </tr>
-            <tr>
-              <th>편의점명</th>
-              <td><input /></td>
-            </tr>
-            <tr>
-              <th>편의점 주소</th>
-              <td><input /></td><td><button class="우편번호">우편번호 찾기</button></td>
-            </tr>
-            <tr>
-              <th>편의점 전화번호</th>
-              <td><input /></td>
-            </tr>            
-          </table>
-          <button>회원가입</button>
+              <p>아이디</p><input /> 
+              <button class="List">중복확인</button>
+              <p>비밀번호</p> <input />
+              <p>비밀번호 확인</p>  <input />
+              <p>사업자등록번호</p> <input />
+              <p>편의점명</p> <input />
+              <p>편의점 주소</p><input />
+              <button class="우편번호">우편번호 찾기</button>
+              <p>편의점 전화번호</p> <input />  
+              <button>회원가입</button>
         </div>
       </div>
     </div>
