--- a/점주로그인.html
+++ b/점주로그인.html
@@ -31,8 +31,8 @@
             비밀번호<input class="pwdBox"><br />
             <button class="ListLogin">로그인</button>
             <ul>
-                <li>아이디찾기</li>
-                <li>비밀번호찾기</li>
+                <li>아이디찾기 <span>|</span></li>
+                <li>비밀번호찾기<span>|</span></li>
                 <li><a href="#">점주회원가입</a></li>
             </ul>
           </div>
