--- a/점주로그인.html
+++ b/점주로그인.html
@@ -27,13 +27,13 @@
       <div class="main-center">
           <div class="box1">
             <h3>점주 로그인</h3>
-            아이디<input class="idBox"><br />
-            비밀번호<input class="pwdBox"><br />
-            <button class="ListLogin">로그인</button>
+            아이디<input class="Listid"><br />
+            비밀번호<input class="Listpwd"><br />
+            <button onclick="ListLogin()">로그인</button>
             <ul>
                 <li>아이디찾기 <span>|</span></li>
                 <li>비밀번호찾기<span>|</span></li>
-                <li><a href="#">점주회원가입</a></li>
+                <li><a href="관리자회원가입.html">점주회원가입</a></li>
             </ul>
           </div>
       </div>
