--- a/점주로그인.html
+++ b/점주로그인.html
@@ -25,10 +25,13 @@
     </div>
     <div class="main">
       <div class="main-center">
-          <div class="box1">
-            <h3>점주 로그인</h3>
-            아이디<input class="Listid"><br />
-            비밀번호<input class="Listpwd"><br />
+          <div class="box1">            
+              <h3>점주 로그인</h3>
+              <div class="ListIdBox">
+                <p>아이디</p><input class="Listid"><br /></div>
+              <div class="ListPwdBox">
+                <p>비밀번호</p><input class="Listpwd"><br />
+            </div>
             <button onclick="ListLogin()">로그인</button>
             <ul>
                 <li>아이디찾기 <span>|</span></li>
