--- a/productView.html
+++ b/productView.html
@@ -5,7 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
- <link rel="stylesheet" href="공용css.css">
+ <link rel="stylesheet" href="productView.css">
 </head>
 <body>
   
@@ -24,8 +24,51 @@
       </div>
     </div>
     <div class="main">
+      <div>
+        <div>
+          <input class="위치"/>
+        </div>
+        <div>
+          <select>
+            <option>과자</option>
+            <option>음료수</option>
+            <option>아이스크림</option>
+          </select>
+        </div>
+        <div>
+          <input class="검색"/>
+        </div>
+      </div>
       <div class="main-center">
-          (각자 해당하는 내용 추가)
+        <div class="tab">
+            <table>
+              <thead>
+                <tr>
+                  <th>지점명</th><th>제품명</th><th>가격</th><th>재고</th><th>이벤트</th><th>할인기간</th>
+                </tr>
+              </thead>
+              <tbody class="tbody">
+                <tr>
+                  <td>emart24 만완구 성결대점</td><td>두쫀쿠</td><td>6,000</td><td>00개</td><td>1+1</td><td>2026-01-01 ~ 2026-02-01</td>
+                </tr>
+                <tr>
+                  <td>emart24 만완구 성결대점</td><td>두쫀쿠</td><td>3,500</td><td>17개</td><td>1,000원 할인</td><td>2026-01-01 ~ 2026-02-01</td>
+                </tr>
+                <tr>
+                  <td>emart24 만완구 성결대점</td><td>두쫀쿠</td><td>1,500</td><td>35개</td><td>500원 할인</td><td>2026-01-01 ~ 2026-02-01</td><td>
+                </tr> 
+                <tr>
+                  <td>emart24 만완구 금정역점</td><td>두쫀쿠</td><td>6,000</td><td>00개</td><td>1+1</td><td>2026-01-01 ~ 2026-02-01</td>
+                </tr>
+                <tr>
+                  <td>emart24 만완구 안양대점</td><td>두쫀쿠</td><td>3,500</td><td>17개</td><td>1,000원 할인</td><td>2026-01-01 ~ 2026-02-01</td>
+                </tr>
+                <tr>
+                  <td>emart24 만완구 성결대점</td><td>두쫀쿠</td><td>1,500</td><td>35개</td><td>500원 할인</td><td>2026-01-01 ~ 2026-02-01</td><td>
+                </tr>         
+              </tbody>
+            </table>
+         </div>
       </div>
     </div>
     <div class="footer">
