--- a/점주로그인.html
+++ b/점주로그인.html
@@ -30,7 +30,7 @@
               <div class="ListIdBox">
                 <p>아이디</p><input class="Listid"><br /></div>
               <div class="ListPwdBox">
-                <p>비밀번호</p><input type=password class="Listpwd"><br /> <!-- 260121 이연지 수정-->
+                <p>비밀번호</p><input type=password class="Listpw"><br /> <!-- 260121 이연지 수정-->
             </div>
             <button onclick="ListLogin()">로그인</button>
             <ul>
