--- a/점주로그인.html
+++ b/점주로그인.html
@@ -12,6 +12,7 @@
     <div class="wrap">
     <div class="header">
       <div class="header1">
+         <div class="headerWhite">
         <div class="header-left">
           <img src="./img/logo.png"/>
         </div>
@@ -21,6 +22,7 @@
         <div class="header-right">
           <a href="#"><img src="./img/menu.png"></a>
         </div>
+        </div><!--headerWhite end-->
       </div>
     </div>
     <div class="main">
