--- a/관리자회원가입.html
+++ b/관리자회원가입.html
@@ -11,33 +11,34 @@
 </head>
 
 <body>
-  <div class="wrap">
+<div class="wrap">
     <div class="header">
       <div class="header1">
+         <div class="headerWhite">
         <div class="header-left">
-          <img src="./img/logo.png" />
+          <img src="./img/logo.png"/>
         </div>
         <div class="header-center">
-          <h3 class="title"> </h3>
+          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
         </div>
-        <div class="haeder-right">
+        <div class="header-right">
           <a href="#"><img src="./img/menu.png"></a>
         </div>
+        </div><!--headerWhite end-->
       </div>
     </div>
     <div class="main">
       <div class="main-center">
         <div class="box1">
-              <p>아이디</p><input class="Listid"/> 
-              <button onclick="Listcheck()">중복확인</button>
-              <p>비밀번호</p> <input class="Listpwd"/>
-              <p>비밀번호 확인</p>  <input />
-              <p>사업자등록번호</p> <input />
-              <p>편의점명</p> <input />
-              <p>편의점 주소</p><input />
-              <button>우편번호 찾기</button>
-              <p>편의점 전화번호</p> <input />  
-              <button onclick="Listreg()">회원가입</button>
+              <div><p>아이디</p><input class="Listid"/> 
+              <button onclick="Listcheck()">중복확인</button></div>
+              <div><p>비밀번호</p> <input class="Listpwd"/></div>
+              <div><p>비밀번호 확인</p>  <input /></div>
+              <div><p>사업자등록번호</p> <input /></div>
+              <div><p>편의점명</p> <input /></div>
+              <div><p>편의점 주소</p><input /> <button>우편번호 찾기</button></div>
+              <div><p>편의점 전화번호</p> <input />  </div><br/>
+              <button class="ListRegBtn" onclick="Listreg()">회원가입</button>
         </div>
       </div>
     </div>
