--- a/관리자회원가입.html
+++ b/관리자회원가입.html
@@ -11,64 +11,77 @@
 </head>
 
 <body>
-<div class="wrap">
+  <div class="wrap">
     <div class="header">
       <div class="header1">
-         <div class="headerWhite">
-        <div class="header-left">
-          <img src="./img/logo.png"/>
-        </div>
-        <div class="header-center">
-          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
-        </div>
-        <div class="header-right">
-          <a href="#"><img src="./img/menu.png"></a>
-        </div>
+        <div class="headerWhite">
+          <div class="header-left">
+            <img src="./img/logo.png" />
+          </div>
+          <div class="header-center">
+            <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+          </div>
+          <div class="header-right">
+            <a href="#"><img src="./img/menu.png"></a>
+          </div>
         </div><!--headerWhite end-->
-      </div>
-    </div>
+      </div><!--header1 end-->
+    </div><!--header-->
     <div class="main">
       <div class="main-center">
         <div class="box1">
-              <div><p>아이디</p><input class="Listid"/> 
-              <button onclick="Listcheck()">중복확인</button></div>
-              <div><p>비밀번호</p> <input class="Listpwd"/></div>
-              <div><p>비밀번호 확인</p>  <input /></div>
-              <div><p>사업자등록번호</p> <input /></div>
-              <div><p>편의점명</p> <input /></div>
-              <div><p>편의점 주소</p><input /> <button>우편번호 찾기</button></div>
-              <div><p>편의점 전화번호</p> <input />  </div><br/>
-              <button class="ListRegBtn" onclick="Listreg()">회원가입</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="footer-left">
-      <ul>
-        <li>편모아 운영 사무국</li>
-        <li>평일 09:30~18:30 (주말 및 공휴일 휴무)</li>
-        <li>
-          <a href="#">문의하기</a><span>|</span>
-          <a href="#">pyeonmoa@gmail.com</a><span>|</span>
-          <a href="#">031-1234-567</a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer-right">
-      <ul>
-        <li>주식회사 편모아</li>
-        <li>
-          <a href="#">회사소개</a><span>|</span>
-          <a href="#">이용약관</a><span>|</span>
-          <a href="#">개인정보처리방침</a><span>|</span>
-          <a href="#">이메일무단수집거부</a><span></span>
-        </li>
-        <li>ⓒ 편모아. All Rights Reserved</li>
-      </ul>
-    </div>
-  </div>
-  </div>
+          <div>
+            <p>아이디</p><input class="Listid" />
+            <button onclick="Listcheck()">중복확인</button>
+          </div>
+          <div>
+            <p>비밀번호</p> <input class="Listpwd" />
+          </div>
+          <div>
+            <p>비밀번호 확인</p> <input />
+          </div>
+          <div>
+            <p>사업자등록번호</p> <input />
+          </div>
+          <div>
+            <p>편의점명</p> <input />
+          </div>
+          <div>
+            <p>편의점 주소</p><input /> <button>우편번호 찾기</button>
+          </div>
+          <div>
+            <p>편의점 전화번호</p> <input />
+          </div><br />
+          <button class="ListRegBtn" onclick="Listreg()">회원가입</button>
+        </div><!--box1 end-->
+      </div><!--main-center end-->
+    </div><!--main end-->
+    <div class="footer">
+      <div class="footer-left">
+        <ul>
+          <li>편모아 운영 사무국</li>
+          <li>평일 09:30~18:30 (주말 및 공휴일 휴무)</li>
+          <li>
+            <a href="#">문의하기</a><span>|</span>
+            <a href="#">pyeonmoa@gmail.com</a><span>|</span>
+            <a href="#">031-1234-567</a>
+          </li>
+        </ul>
+      </div><!-- footer-left end -->
+      <div class="footer-right">
+        <ul>
+          <li>주식회사 편모아</li>
+          <li>
+            <a href="#">회사소개</a><span>|</span>
+            <a href="#">이용약관</a><span>|</span>
+            <a href="#">개인정보처리방침</a><span>|</span>
+            <a href="#">이메일무단수집거부</a><span></span>
+          </li>
+          <li>ⓒ 편모아. All Rights Reserved</li>
+        </ul>
+      </div><!-- footer-right end-->
+    </div><!--footer end-->
+  </div><!--wrap end-->
   <script src='관리자회원가입.js'></script>
 </body>
 
