--- a/관리자회원가입.html
+++ b/관리자회원가입.html
@@ -28,16 +28,30 @@
     <div class="main">
       <div class="main-center">
         <div class="box1">
-              <p>아이디</p><input class="Listid"/> 
-              <button onclick="Listcheck()">중복확인</button>
-              <p>비밀번호</p> <input class="Listpw"/> <!-- 260121 이연지 수정 -->
-              <p>비밀번호 확인</p>  <input />
-              <p>사업자등록번호</p> <input class="ListbrNum"/>
-              <p>편의점명</p> <input class="ListconvName"/>
-              <p>편의점 주소</p><input class="Listlocation"/>
-              <button>우편번호 찾기</button>
-              <p>편의점 전화번호</p> <input class="Listphone"/>  
-              <button onclick="Listreg()">회원가입</button>
+          <div>
+            <p>아이디</p><input class="Listid" />
+            <button onclick="Listcheck()">중복확인</button>
+          </div>
+          <div>
+            <p>비밀번호</p> <input class="Listpw" />
+          </div>
+          <div>
+            <p>비밀번호 확인</p> <input />
+          </div>
+          <div>
+            <p>사업자등록번호</p> <input class="ListbrNum" />
+          </div>
+          <div>
+            <p>편의점명</p> <input class="ListconvName" />
+          </div>
+          <div>
+            <p>편의점 주소</p><input class="Listlocation" />
+            <button>우편번호 찾기</button>
+          </div>
+          <div>
+            <p>편의점 전화번호</p> <input class="Listphone" />
+          </div><br />
+          <button onclick="Listreg()">회원가입</button>
         </div>
       </div>
     </div>
