0122(이미지링크수정)

--- a/관리자회원가입.html
+++ b/관리자회원가입.html
@@ -16,13 +16,13 @@
       <div class="header1">
         <div class="headerWhite">
           <div class="header-left">
-            <img src="./img/logo.png" />
+            <img src="./productView/logo.png" />
           </div>
           <div class="header-center">
             <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
           </div>
           <div class="header-right">
-            <a href="#"><img src="./img/menu.png"></a>
+            <a href="#"><img src="./productView/menu.png"></a>
           </div>
         </div><!--headerWhite end-->
       </div><!--header1 end-->
