--- a/admin-login/admin-login.html
+++ b/admin-login/admin-login.html
@@ -14,13 +14,13 @@
       <div class="header1">
          <div class="headerWhite">
         <div class="header-left">
-          <img src="./productView/logo.png"/>
+          <img src="/productView/logo.png"/>
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
         </div>
         <div class="header-right">
-          <a href="#"><img src="./productView/menu.png"></a>
+          <a href="#"><img src="/productView/menu.png"></a>
         </div>
         </div><!--headerWhite end-->
       </div>
@@ -38,7 +38,7 @@
             <ul>
                 <li>아이디찾기 <span>|</span></li>
                 <li>비밀번호찾기<span>|</span></li>
-                <li><a href="관리자회원가입.html">점주회원가입</a></li>
+                <li><a href="/admin-signup/admin-signup.html">점주회원가입</a></li>
             </ul>
           </div>
       </div>
