--- a/admin-signup/admin-signup.html
+++ b/admin-signup/admin-signup.html
@@ -35,22 +35,22 @@
             <button onclick="Listcheck()">중복확인</button>
           </div>
           <div>
-            <p>비밀번호</p> <input class="Listpwd" />
+            <p>비밀번호</p> <input class="Listpw" />
           </div>
           <div>
             <p>비밀번호 확인</p> <input />
           </div>
           <div>
-            <p>사업자등록번호</p> <input />
+            <p>사업자등록번호</p> <input class="ListbrNum"/>
           </div>
           <div>
-            <p>편의점명</p> <input />
+            <p>편의점명</p> <input class="ListconvName"/>
           </div>
           <div>
-            <p>편의점 주소</p><input /> <button>우편번호 찾기</button>
+            <p>편의점 주소</p><input class="Listlocation"/> <button>우편번호 찾기</button>
           </div>
           <div>
-            <p>편의점 전화번호</p> <input />
+            <p>편의점 전화번호</p> <input class="Listphone"/>
           </div><br />
           <button class="ListRegBtn" onclick="Listreg()">회원가입</button>
         </div><!--box1 end-->
