260122 이연지 수정

--- a/productWriter/productWriter.html
+++ b/productWriter/productWriter.html
@@ -25,14 +25,14 @@
     </div>
     <div class="main">
       <div class="main-center">
-        <input type="file" class="Adminimg">
-        <div><p> 제품명 </p> <input class="Adminproduct"></div>
-        <div><p> 카테고리 </p>
-        <select class="Admincategory">
-          <option> 과자 </option>
-          <option> 음료수 </option>
-        </select></div>
-        <div><p> 이벤트 종류 </p>
+        <input type="file" class="Adminimg"> <!-- 수정 -->
+        <div><p> 제품명 </p> <input class="Adminproduct"></div> <!-- 260122 수정 -->
+        <div><p> 카테고리 </p> <!-- 260122 수정 -->
+        <select class="Admincategory"> <!-- 260122 수정 -->
+          <option> 과자 </option> <!-- 260122 수정 -->
+          <option> 음료수 </option> <!-- 260122 수정 -->
+        </select></div> <!-- 260122 수정 -->
+        <div><p> 이벤트 종류 </p> <!-- 260122 수정 -->
         <select class="Adminevent">
             <option> 1+1 </option>
             <option> 500원 할인 </option>
