--- a/admin-signup/admin-signup.html
+++ b/admin-signup/admin-signup.html
@@ -16,13 +16,13 @@
       <div class="header1">
         <div class="headerWhite">
           <div class="header-left">
-            <img src="/productView/logo.png" />
+            <img src="/productView/logo.png" /> <!-- 260122 수정 -->
           </div>
           <div class="header-center">
             <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
           </div>
           <div class="header-right">
-            <a href="#"><img src="/productView/menu.png"></a>
+            <a href="#"><img src="/productView/menu.png"></a> <!-- 260122 수정 -->
           </div>
         </div><!--headerWhite end-->
       </div><!--header1 end-->
@@ -35,7 +35,7 @@
             <button onclick="Listcheck()">중복확인</button>
           </div>
           <div>
-            <p>비밀번호</p> <input class="Listpw" />
+            <p>비밀번호</p> <input class="Listpw" /> <!-- 260122 수정 -->
           </div>
           <div>
             <p>비밀번호 확인</p> <input />
