--- a/productView/productView.html
+++ b/productView/productView.html
@@ -22,9 +22,10 @@
           <button onclick="menu()"><img src="./menu.png"></button>
           
           <div class="hide">
-            <a href="#"> <li>로그인</li></a>
-            <a href="#"><li>회원가입</li></a>
-            <a href="#"><li>내 재고 확인</li></a>
+            <a href="../admin-login/admin-login.html"> <li>로그인</li></a>
+            <a href="../admin-signup/admin-signup.html"><li>회원가입</li></a>
+            <a href="../productUpdate/productUpdate.html"><li>내 재고 확인</li></a>
+            <a href="../productWriter/productWriter.html"><li>재고등록</li></a>
           </div>
         </div>
       </div>
@@ -42,6 +43,7 @@
         <div class="main-top-right">
           <div>
            <select class="select">
+            <option>카테고리를 선택하세요</option>
              <option>과자</option>
              <option>음료수</option>
              <option>아이스크림</option>
