--- a/productUpdate/productUpdate.html
+++ b/productUpdate/productUpdate.html
@@ -23,7 +23,13 @@
           <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
         </div>
         <div class="header-right">
-          <a href="#"><img src="./menu.png"/></a>
+          <button onclick="menu()"><img src="./menu.png"></button>
+          
+          <div class="hide">
+            <a href="../admin-login/admin-login.html"> <li>로그인</li></a>
+            <a href="../admin-signup/admin-signup.html"><li>회원가입</li></a>
+            <a href="../productWriter/productWriter.html"><li>재고등록</li></a>
+          </div>
         </div>
       </div>
     </div>
