--- a/productWriter/productWriter.html
+++ b/productWriter/productWriter.html
@@ -13,13 +13,13 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <img src="./img/logo.png"/>
+          <img src="./logo.png"/>
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
         </div>
         <div class="haeder-right">
-          <a href="#"><img src="./img/menu.png"></a>
+          <a href="#"><img src="./menu.png"></a>
         </div>
       </div>
     </div>
