--- a/productWriter/productWriter.html
+++ b/productWriter/productWriter.html
@@ -24,7 +24,7 @@
     </div>
     <div class="main">
       <div class="main-center">
-       <input type="file" class="Adminimg">
+       <div>이미지 파일<input type="file" class="Adminimg"></div>
         <div><p> 제품명 </p> <input class="Adminproduct"></div>
         <div><p> 카테고리 </p>
         <select class="Admincategory">
