html. 타이틀 변경

--- a/admin-signup/admin-signup.html
+++ b/admin-signup/admin-signup.html
@@ -19,7 +19,7 @@
             <img src="/productView/logo.png" /> <!-- 260122 수정 -->
           </div>
           <div class="header-center">
-            <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+            <h3 class="title"> 회원가입</h3>
           </div>
           <div class="header-right">
             <a href="#"><img src="/productView/menu.png"></a> <!-- 260122 수정 -->
