--- a/modifyScreen/modifyScreen.html
+++ b/modifyScreen/modifyScreen.html
@@ -6,7 +6,6 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel="stylesheet" href="productWriter.css">
   <link rel="stylesheet" href="modifyScreen.css">
 </head>
 
@@ -18,7 +17,7 @@
           <img src="./logo.png" />
         </div>
         <div class="header-center">
-          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+          <h3 class="title"> 등록된 상품 수정</h3>
         </div>
         <div class="haeder-right">
           <button onclick="menu()"><img src="./menu.png"></button>
