--- a/productUpdate/productUpdate.html
+++ b/productUpdate/productUpdate.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="header-center">
-          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+          <h3 class="title"> 내 상품 확인</h3>
         </div>
         <div class="header-right">
           <button onclick="menu()"><img src="./menu.png"></button>
