--- a/productView/productView.html
+++ b/productView/productView.html
@@ -16,7 +16,7 @@
           <img src="./logo.png"/>
         </div>
         <div class="header-center">
-          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+          <h3 class="title"> 편의점 상품 검색</h3>
         </div>
         <div class="haeder-right">
           <button onclick="menu()"><img src="./menu.png"></button>
