--- a/관리자로그인.html
+++ b/관리자로그인.html
@@ -17,7 +17,7 @@
           <img src="./productView/logo.png"/>
         </div>
         <div class="header-center">
-          <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
+          <h3 class="title"> 로그인</h3>
         </div>
         <div class="header-right">
           <a href="#"><img src="./productView/menu.png"></a>
