--- a/productUpdate/productUpdate.html
+++ b/productUpdate/productUpdate.html
@@ -26,9 +26,8 @@
           <button onclick="menu()"><img src="./menu.png"></button>
           
           <div class="hide">
-            <a href="../admin-login/admin-login.html"> <li>로그인</li></a>
-            <a href="../admin-signup/admin-signup.html"><li>회원가입</li></a>
             <a href="../productWriter/productWriter.html"><li>재고등록</li></a>
+            <a href="../productView/productView.html"><li>재고확인</li></a>
           </div>
         </div>
       </div>
@@ -40,7 +39,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>지점명</th><th>이미지</th><th>제품명</th><th>가격</th><th>재고</th><th>이벤트</th><th>할인기간</th>
+                  <th>지점명</th><th>제품 사진</th><th>제품명</th><th>가격</th><th>재고</th><th>이벤트</th><th>할인기간</th>
                 </tr>
               </thead>
               <tbody class="update-tbody">
