로고 클릭시 View 화면으로 이동

--- a/admin-login/admin-login.html
+++ b/admin-login/admin-login.html
@@ -14,7 +14,7 @@
       <div class="header1">
          <div class="headerWhite">
         <div class="header-left">
-          <img src="/productView/logo.png"/> <!-- 260122 수정 -->
+          <a href="../productView/productView.html"><img src="./logo.png"/></a> 
         </div>
         <div class="header-center">
           <h3 class="title"> 로그인 </h3>
