--- a/modifyScreen/modifyScreen.html
+++ b/modifyScreen/modifyScreen.html
@@ -14,7 +14,7 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <img src="./logo.png" />
+          <a href="../productView/productView.html"><img src="./logo.png"/></a> 
         </div>
         <div class="header-center">
           <h3 class="title"> 등록된 상품 수정</h3>
