--- a/productUpdate/productUpdate.html
+++ b/productUpdate/productUpdate.html
@@ -16,7 +16,7 @@
         <div class="header-left">
           <div>
             <div><a href="../productView/productView.html"> ◀ </a></div>
-            <img src="./logo.png"/>
+            <a href="../productView/productView.html"><img src="./logo.png"/></a> 
           </div>
         </div>
         <div class="header-center">
