--- a/productWriter/productWriter.html
+++ b/productWriter/productWriter.html
@@ -14,7 +14,7 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <img src="./logo.png" />
+          <a href="../productView/productView.html"><img src="./logo.png"/></a> 
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
