--- a/productView/productView.html
+++ b/productView/productView.html
@@ -13,7 +13,7 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <img src="./logo.png"/>
+          <a href="../productView/productView.html"><img src="./logo.png"/></a> 
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 상품 검색</h3>
