--- a/admin-login/admin-login.html
+++ b/admin-login/admin-login.html
@@ -14,13 +14,13 @@
       <div class="header1">
          <div class="headerWhite">
         <div class="header-left">
-          <img src="/productView/logo.png"/> <!-- 260122 수정 -->
+          <img src="../공용img/logo.png"/> <!-- 260122 수정 -->
         </div>
         <div class="header-center">
           <h3 class="title"> 로그인 </h3>
         </div>
         <div class="header-right">
-          <a href="#"><img src="/productView/menu.png"></a> <!-- 260122 수정 -->
+          <a href="#"><img src="../공용img/menu.png"></a>
         </div>
         </div><!--headerWhite end-->
       </div>
