--- a/productView/productView.html
+++ b/productView/productView.html
@@ -13,13 +13,13 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <img src="./logo.png"/>
+          <img src="../공용img/logo.png"/>
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 상품 검색</h3>
         </div>
         <div class="haeder-right">
-          <button onclick="menu()"><img src="./menu.png"></button>
+          <button onclick="menu()"><img src="../공용img/menu.png"></button>
           
           <div class="hide">
             <a href="../admin-login/admin-login.html"> <li>로그인</li></a>
@@ -34,7 +34,7 @@
       <div class="main-top">
         <div class="main-top-left">
           <div>
-            <img src="./위치.png"/>
+            <img src="../공용img/위치.png"/>
             <div>
               <input type="text" placeholder="만안구 성결대"/>
             </div>
