--- a/productUpdate/productUpdate.html
+++ b/productUpdate/productUpdate.html
@@ -16,14 +16,14 @@
         <div class="header-left">
           <div>
             <div><a href="../productView/productView.html"> ◀ </a></div>
-            <img src="./logo.png"/>
+            <img src="../공용img/logo.png"/>
           </div>
         </div>
         <div class="header-center">
           <h3 class="title">내 상품 확인</h3>
         </div>
         <div class="header-right">
-          <button onclick="menu()"><img src="./menu.png"></button>
+          <button onclick="menu()"><img src="../공용img/menu.png"></button>
           
           <div class="hide">
             <a href="../productWriter/productWriter.html"><li>재고등록</li></a>
