--- a/productWriter/productWriter.html
+++ b/productWriter/productWriter.html
@@ -14,13 +14,13 @@
     <div class="header">
       <div class="header1">
         <div class="header-left">
-          <a href="../productView/productView.html"><img src="./logo.png"/></a> 
+          <a href="../productView/productView.html"><img src="../공용img/logo.png"/></a> 
         </div>
         <div class="header-center">
           <h3 class="title"> 편의점 할인 정보 및 재고 관리</h3>
         </div>
         <div class="haeder-right">
-          <button onclick="menu()"><img src="./menu.png"></button>
+          <button onclick="menu()"><img src="../공용img/menu.png"></button>
           
           <div class="hide">
             <a href="../productUpdate/productUpdate.html"><li>내 재고 확인</li></a>
