--- a/admin-login/admin-login.html
+++ b/admin-login/admin-login.html
@@ -38,7 +38,7 @@
             <ul>
                 <li>아이디찾기 <span>|</span></li>
                 <li>비밀번호찾기<span>|</span></li>
-                <li><a href="/admin-signup/admin-signup.html">점주회원가입</a></li>
+                <li><a href="../admin-signup/admin-signup.html">점주회원가입</a></li>
             </ul>
           </div>
       </div>
