--- a/admin-signup/admin-signup.html
+++ b/admin-signup/admin-signup.html
@@ -22,7 +22,12 @@
             <h3 class="title"> 회원가입</h3>
           </div>
           <div class="header-right">
-            <a href="#"><img src="../공용img/menu.png"></a> <!-- 260122 수정 -->
+             <button onclick="menu()"><img src="../공용img/menu.png"></button>
+          
+          <div class="hide">
+            <a href="../admin-login/admin-login.html"><li>로그인</li></a>
+            <a href="../productView/productView.html"><li>상품현황</li></a>
+          </div>
           </div>
         </div><!--headerWhite end-->
       </div><!--header1 end-->
