--- a/admin-login/admin-login.html
+++ b/admin-login/admin-login.html
@@ -20,7 +20,12 @@
           <h3 class="title"> 로그인 </h3>
         </div>
         <div class="header-right">
-          <a href="#"><img src="../공용img/menu.png"></a>
+          <button onclick="menu()"><img src="../공용img/menu.png"></button>
+          
+          <div class="hide">
+            <a href="../admin-signup/admin-signup.html"><li>회원가입</li></a>
+            <a href="../productView/productView.html"><li>상품현황</li></a>
+          </div>
         </div>
         </div><!--headerWhite end-->
       </div>
